// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldWrapper/ErrorMessage > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnScm cUcvaQ sc-dkzCjb kZxHOV"
  >
    <span
      class="sc-bczSft imQpyU"
      data-rc="DisclaimerR"
    >
      Error message
    </span>
  </div>
</DocumentFragment>
`;

exports[`FieldWrapper/ErrorMessage should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR bwgTNC sc-dkrFOg kvDetP"
  >
    <span
      class="sc-bcXHqe hVJkQo"
      data-rc="DisclaimerR"
    >
      Error message
    </span>
  </div>
</DocumentFragment>
`;
